crates/squealy/tests/compile_fail/window_lag_rejects_aggregate_operand.stderr
error[E0277]: the trait bound `squealy::AggregateExprAst<squealy::ColumnExprAst<PostId>>: NonAggregateAst` is not satisfied
  --> tests/compile_fail/window_lag_rejects_aggregate_operand.rs:15:13
   |
15 |         lag(post.id.sum(), 1).over(|w| w.order_by(post.id.asc()))
   |         --- ^^^^^^^^^^^^^ the trait `NonAggregateAst` is not implemented for `squealy::AggregateExprAst<squealy::ColumnExprAst<PostId>>`
   |         |
   |         required by a bound introduced by this call
   |
note: required by a bound in `squealy::lag`
  --> src/expr.rs
   |
   | pub fn lag<'scope, E>(
   |        --- required by a bound in this function
...
   |     E::Ast: NonAggregateAst,
   |             ^^^^^^^^^^^^^^^ required by this bound in `lag`

error[E0277]: the trait bound `SumExpr<PostId>: squealy::IntoWindowNullable` is not satisfied
  --> tests/compile_fail/window_lag_rejects_aggregate_operand.rs:15:13
   |
15 |         lag(post.id.sum(), 1).over(|w| w.order_by(post.id.asc()))
   |         --- ^^^^^^^^^^^^^ the trait `squealy::IntoWindowNullable` is not implemented for `SumExpr<PostId>`
   |         |
   |         required by a bound introduced by this call
   |
   = help: the following other types implement trait `squealy::IntoWindowNullable`:
             Nullable<K>
             PostId
             PostUserId
             ScalarNullable<K>
             bool
             f32
             f64
             i128
           and $N others
note: required by a bound in `squealy::lag`
  --> src/expr.rs
   |
   | pub fn lag<'scope, E>(
   |        --- required by a bound in this function
...
   |     E::Kind: IntoWindowNullable,
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `lag`

error[E0277]: the trait bound `SumExpr<PostId>: squealy::IntoWindowNullable` is not satisfied
  --> tests/compile_fail/window_lag_rejects_aggregate_operand.rs:15:9
   |
15 |         lag(post.id.sum(), 1).over(|w| w.order_by(post.id.asc()))
   |         ^^^^^^^^^^^^^^^^^^^^^ the trait `squealy::IntoWindowNullable` is not implemented for `SumExpr<PostId>`
   |
   = help: the following other types implement trait `squealy::IntoWindowNullable`:
             Nullable<K>
             PostId
             PostUserId
             ScalarNullable<K>
             bool
             f32
             f64
             i128
           and $N others
